Attempt to move theme icon to its own file - Won't actually be using this approach, but want to stash it to refer to later - Transitions don't work. Assuming it's due to classes not applying to the shadow DOM - Would need to ensure the file loads without flickering - Size doesn't obey container. Probably an easy fix. - Still requires styles instead of attributes or `* { unset: all; }` will wipe them out - Can apply colors from css - It's nice to be able to see and work with the icon separately from the site - It's nice to be able to put the transitions in the file itself - The use element requires the href to include an id. - Worse in chromium: mask and hoer don't work with <use>

--- a/assets/res/main.css
+++ b/assets/res/main.css
@@ -159,33 +159,12 @@ a, button {
 	user-select: none;
 }
 
-.header-theme-icon-one {
+.header-theme-icon-background {
 	fill: var(--dark-background);
 }
 
-.header-theme-icon-two {
+.header-theme-icon-fill {
 	fill: var(--dark-text);
-}
-
-.header-theme-icon-mask {
-	.theme-system & {
-		rx: 0%;
-		transition-duration: 200ms;
-		transition-property: rx, width;
-		width: 50%;
-	}
-
-	.theme-light & {
-		transition-duration: 200ms;
-		width: 100%;
-	}
-
-	.theme-dark & {
-		rx: 1%;
-		transition-duration: 400ms;
-		width: 0%;
-		x: 100%;
-	}
 }
 
 .header-about {
